--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "core-js": "^2.5.4",
     "lodash": "^4.17.11",
     "rxjs": "~6.3.3",
+    "tiny-timer": "^1.3.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
