--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,21 +1,16 @@
-image: node:latest
- 
-cache:
-  paths:
-    - node_modules/
- 
-stages:
-  - deploy
- 
-deploy:
-  stage: deploy
-  environment:
-    name: prod
+image: node:8.12.0
+
+pages:
+  cache:
+    paths:
+      - node_modules/
   script:
+    - npm install -g @angular/cli@7.1.2
     - npm install
-    - npm build --prod
-  only:
-    - master
+    - npm run buildProd
   artifacts:
     paths:
-    - dist/fullcontrol
+      - public
+  only:
+    - master
+    - pages
