--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,9 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
+  "scripts": {
+    "buildProd": "ng build --base-href=/your-project-slug/"
+  },
   "projects": {
     "fullcontrol": {
       "root": "",
@@ -14,6 +17,7 @@
         }
       },
       "architect": {
+        "buildProd": "ng build --base-href=/your-project-slug/",
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
