--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              "src/app/styles.less",
+              "src/app/new-workout/styles.less"
             ],
             "scripts": []
           },
@@ -83,7 +85,9 @@
             "tsConfig": "src/tsconfig.spec.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              "src/app/styles.less",
+              "src/app/new-workout/styles.less"
             ],
             "scripts": [],
             "assets": [
