--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
     "core-js": "^2.5.4",
+    "firebase": "^5.9.1",
     "lodash": "^4.17.11",
     "rxjs": "~6.3.3",
     "tiny-timer": "^1.3.0",
