--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "importHelpers": true,
+    "allowJs": true,
     "target": "es5",
     "typeRoots": [
       "node_modules/@types"
